分离客户端和服务端入口

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,23 +18,38 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
 # 查找 Qt 包
 find_package(Qt6 REQUIRED COMPONENTS Core Widgets Svg Sql Network)
 
+set(ServerSources
+    src/server/ServerMain.cpp src/server/MainServer.h src/server/MainServer.cpp
+    src/server/servermainwindow.h src/server/servermainwindow.cpp
+    src/server/servermainwindow.ui)
+set(ClientSources
+    src/client/ClientMain.cpp src/client/StandardClient.h
+    src/client/StandardClient.cpp src/client/clientmainwindow.h
+    src/client/clientmainwindow.cpp src/client/clientmainwindow.ui)
+
 # 创建可执行文件
-qt_add_executable(
-  qtiptest MANUAL_FINALIZATION src/main.cpp src/server/servermainwindow.h
-  src/server/servermainwindow.cpp src/server/servermainwindow.ui
-  src/client/clientmainwindow.h src/client/clientmainwindow.cpp src/client/clientmainwindow.ui)
+qt_add_executable(qtip-ServerTest MANUAL_FINALIZATION ${ServerSources})
+qt_add_executable(qtip-ClientTest MANUAL_FINALIZATION ${ClientSources})
 
 # 链接库
-target_link_libraries(qtiptest PRIVATE Qt6::Core Qt6::Widgets Qt6::Svg Qt6::Sql
-                                       Qt6::Network)
+target_link_libraries(qtip-ServerTest PRIVATE Qt6::Core Qt6::Widgets Qt6::Svg
+                                              Qt6::Sql Qt6::Network)
+target_link_libraries(qtip-ClientTest PRIVATE Qt6::Core Qt6::Widgets Qt6::Svg
+                                              Qt6::Sql Qt6::Network)
 
 # 安装配置
 include(GNUInstallDirs)
 install(
-  TARGETS qtiptest
+  TARGETS qtip-ServerTest
+  BUNDLE DESTINATION .
+  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
+install(
+  TARGETS qtip-ClientTest
   BUNDLE DESTINATION .
   LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
   RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
 
 # Qt6 最终化处理
-qt_finalize_executable(qtiptest)
+qt_finalize_executable(qtip-ServerTest)
+qt_finalize_executable(qtip-ClientTest)
